// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileAttachmentForm/> no props 1`] = `
<Fragment>
  <span
    className="translator--toggle__wizard"
  >
    <FormSection
      iconSpacer={false}
      label="Attachments"
      showLabel={true}
    >
      <div
        className=""
      >
        <FileAttachmentContainer
          acceptedFormats=""
          allowDirectories={true}
          allowMultiple={true}
          compact={false}
          handleChange={[Function]}
          handleRemoval={[Function]}
          includeDirectoryFiles={false}
          labelLong="Select file or drag and drop here."
        />
      </div>
    </FormSection>
  </span>
</Fragment>
`;

exports[`<FileAttachmentForm/> with attributes 1`] = `
<Fragment>
  <span
    className="translator--toggle__wizard"
  >
    <FormSection
      iconSpacer={false}
      label="file attachment"
      showLabel={true}
    >
      <div
        className=""
      >
        <FileAttachmentContainer
          acceptedFormats=".tsv, .xls, .xlsx"
          allowDirectories={false}
          allowMultiple={false}
          compact={false}
          handleChange={[Function]}
          handleRemoval={[Function]}
          includeDirectoryFiles={false}
          labelLong="Select file or drag and drop here."
        />
      </div>
    </FormSection>
  </span>
  <div
    className="row"
  >
    <div
      className="col-md-9"
    >
      <div
        className="file-form-formats"
      >
        <strong>
          Supported formats include: 
        </strong>
        .tsv, .xls, .xlsx
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="pull-right"
      >
        <Memo()
          templateUrl="#downloadtemplateurl"
          text="Template"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
